5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1585_1017.log
== TEST (2019-04-01 11:29:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import sin, cos, acos, radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: "))) 
R = 6371,01
d = R * acos(sin (t1) * sin (t2) + cos (t1) * cos(t2) * cos (g1 - g2))
print (round(d,2))




-- ERROR:
File "XXXX", line 9
    R = 6371,01
              ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 11:30:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import sin
from math import cos
from math import radians
from math import acos

t1 = radians (float(input("Latitude de P1: ")))
g1 = radians (float(input("Longitude de P1: ")))
t2 = radians (float(input("Latitude de P2: ")))
g2 = radians (float(input("Longitude de P2: "))) 
R = 6371,01
d = R * acos(sin (t1) * sin (t2) + cos (t1) * cos(t2) * cos (g1 - g2))
print (round(d,2))




-- ERROR:
File "XXXX", line 13
    R = 6371,01
              ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 11:30:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import sin
from math import cos
from math import radians
from math import acos

t1 = radians (float(input("Latitude de P1: ")))
g1 = radians (float(input("Longitude de P1: ")))
t2 = radians (float(input("Latitude de P2: ")))
g2 = radians (float(input("Longitude de P2: "))) 
R = 6371,01
d = R * acos(sin (t1) * sin (t2) + cos (t1) * cos(t2) * cos (g1 - g2))
print (round(d,2))




-- ERROR:
File "XXXX", line 13
    R = 6371,01
              ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 11:31:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import sin
from math import cos
from math import radians
from math import acos

t1 = radians (float(input("Latitude de P1: ")))
g1 = radians (float(input("Longitude de P1: ")))
t2 = radians (float(input("Latitude de P2: ")))
g2 = radians (float(input("Longitude de P2: "))) 
R = 6371,01
d = R * acos (sin (t1) * sin (t2) + cos (t1) * cos(t2) * cos (g1 - g2))
print (round(d,2))




-- ERROR:
File "XXXX", line 13
    R = 6371,01
              ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 11:32:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import sin
from math import cos
from math import radians
from math import acos

t1 = radians (float(input("Latitude de P1: ")))
g1 = radians (float(input("Longitude de P1: ")))
t2 = radians (float(input("Latitude de P2: ")))
g2 = radians (float(input("Longitude de P2: "))) 
d =6371.01 * acos (sin (t1) * sin (t2) + cos (t1) * cos(t2) * cos (g1 - g2))
print (round(d,2))




-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 11:35:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import sin
from math import cos
from math import radians
from math import acos

t1 = radians (float(input("Latitude de P1: ")))
g1 = radians (float(input("Longitude de P1: ")))
t2 = radians (float(input("Latitude de P2: ")))
g2 = radians (float(input("Longitude de P2: "))) 
d =6371.01 * acos (sin (t1) * sin (t2) + cos (t1) * cos(t2) * cos (g1 - g2))
print (round(d,2))




-- EXECUTION TIME:
0.127129
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 11:36:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#from math import sin
#from math import cos
#from math import radians
#from math import acos
from math import sin, cos, acos, radians
t1 = radians (float(input("Latitude de P1: ")))
g1 = radians (float(input("Longitude de P1: ")))
t2 = radians (float(input("Latitude de P2: ")))
g2 = radians (float(input("Longitude de P2: "))) 
d =6371.01 * acos (sin (t1) * sin (t2) + cos (t1) * cos(t2) * cos (g1 - g2))
print (round(d,2))




-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
